Make base input validation on sign up

--- a/src/View/page/sign-up.html
+++ b/src/View/page/sign-up.html
@@ -33,26 +33,31 @@
                                 <span class="input__icon">
                                     <i class="icon-mail"></i>
                                 </span>
-                                <input type="text" name="email" class="input__text" placeholder="johnidoe@oply.com">
+                                <input type="email" name="email" class="input__text" placeholder="johnidoe@oply.com">
                             </div>
+                            <label class="errorLabel"></label>
+
                         </div>
-                        <div class="field">
+                        <div class="field password_field">
                             <label for="" class="label">Password</label>
                             <div class="input__text-icon">
                                 <span class="input__icon">
                                     <i class="icon-key"></i>
                                 </span>
-                                <input type="text" name="password" class="input__text" placeholder="johnidoe@oply.com">
+                                <input type="password" name="password" class="input__text" placeholder="johnidoe@oply.com">
                             </div>
+                            <label class="errorLabel"></label>
+
                         </div>
-                        <div class="field">
+                        <div class="field password_field">
                             <label for="" class="label">Confirmation of password</label>
                             <div class="input__text-icon">
                                 <span class="input__icon">
                                     <i class="icon-key"></i>
                                 </span>
-                                <input type="text" name="confirmPassword" class="input__text" placeholder="johnidoe@oply.com">
+                                <input type="password" name="confirmPassword" class="input__text" placeholder="johnidoe@oply.com">
                             </div>
+                            <label class="errorLabel"></label>
                         </div>
                     </div>
 
@@ -74,5 +79,6 @@
 
 </body>
 <script src="../../../web/js/actions.js"></script>
+<script src="../../../web/js/format.js"></script>
 
 </html>
