--- a/web/scss/components/_label.scss
+++ b/web/scss/components/_label.scss
@@ -4,3 +4,11 @@
     text-transform: uppercase;
     letter-spacing: .15px;
 }
+
+.errorLabel {
+    color: $orange;
+    margin-top: .25rem;
+    font-size: .75rem;
+    text-transform: uppercase;
+    letter-spacing: .15px;
+}
