--- a/src/View/sign-in.html.twig
+++ b/src/View/sign-in.html.twig
@@ -13,20 +13,26 @@
                     <p class="subtitle">Petite catchline des familles</p>
                 </div>
 
-                <form action="" method="post">
+                <form action="" class="formData" name="LOGIN" method="post">
                     <div class="sign-up__form-body">
                         <div class="field">
-                            <label for="" class="label">Email address<i class="tooltip-info icon-tooltip"></i></label>
+                            <label for="" class="label">Email address
+                                <i class="tooltip-info icon-tooltip"></i>
+                            </label>
                             <div class="input__text-icon">
-                                <span class="input__icon"><i class="icon-mail"></i></span>
-                                <input name="mail" type="text" class="input__text" placeholder="johnidoe@oply.com" required>
+                                <span class="input__icon">
+                                    <i class="icon-mail"></i>
+                                </span>
+                                <input type="text" name="email" class="input__text" placeholder="johnidoe@oply.com">
                             </div>
                         </div>
                         <div class="field">
                             <label for="" class="label">Password</label>
                             <div class="input__text-icon">
-                                <span class="input__icon"><i class="icon-key"></i></span>
-                                <input type="password"  name="pwd" class="input__text" placeholder="johnidoe@oply.com" required>
+                                <span class="input__icon">
+                                    <i class="icon-key"></i>
+                                </span>
+                                <input type="text" name="password" class="input__text" placeholder="johnidoe@oply.com">
                             </div>
                         </div>
                     </div>
@@ -36,9 +42,11 @@
 
                     <div class="sign-up__form-footer">
                         <div class="btn__outer">
-                            <button value="Se connecter" name="connexion_bouton" class="btn btn__center">Sign in now</button>
+                            <button value="Se connecter" name="connexion_bouton" class="btn btn__center" type="submit">Sign in now</button>
                         </div>
-                        <p class="btn__bottom-msg">Doesn't have an account? <a href="/?a=sign-up">Sign up here</a></p>
+                        <p class="btn__bottom-msg">Doesn't have an account?
+                            <a href="/?a=sign-up">Sign up here</a>
+                        </p>
                     </div>
                 </form>
             </div>
@@ -46,4 +54,8 @@
             <img src="https://res.cloudinary.com/dj09xr9gd/image/upload/v1528813897/illustrations/illu-connect.png" class="sign-up__bg-connect">
         </main>
     </div>
+{% endblock %}
+{% block javascripts %}
+    {#<script src="js/actions.js"></script>#}
+
 {% endblock %}
