--- a/src/View/sales/sign-up.html.twig
+++ b/src/View/sales/sign-up.html.twig
@@ -63,6 +63,6 @@
     </div>
 {% endblock %}
 {% block javascripts %}
-    {#<script src="js/actions.js">#}
-    {#</script>#}
+    <script src="js/client.js"></script>
+    <script src="js/select.js"></script>
 {% endblock %}
